# memshelf-mcp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  glama.json  pyproject.toml  server.json  smithery.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  roadmap.md
.github/workflows/: release.yml  security.yml
adapters/claude-code/: CLAUDE-md-snippet.md  README.md
adapters/claude-code/.claude-plugin/: plugin.json
adapters/claude-code/hooks/: autopush.sh  hooks.json  pre-commit  session-start-index.sh
adapters/claude-code/skills/shelve/: SKILL.md
docs/: ARCHITECTURE.md  DECISIONS.md  LANDSCAPE.md  M0.md  MANIFEST.md  ROADMAP.md  demo.md
docs/assets/: case-b-week-report.html
docs/examples/: INDEX-example.md  episode-example.md
src/memshelf_mcp/: __init__.py  cli.py  server.py  tools.py
src/memshelf_mcp/core/: __init__.py  chart.py  digest.py  doctor.py  episode.py  frontmatter.py  importer.py  init.py  policy.py  recall.py  redact.py  remote.py  shelve.py  stats.py
tests/: test_chart.py  test_cli.py  test_digest.py  test_doctor.py  test_episode.py  test_frontmatter.py  test_hooks.py  test_import.py  test_init.py  test_policy.py  test_recall.py  test_redact.py  test_remote.py  test_server.py  test_shelve.py  test_stats.py  test_tools.py
