[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memshelf-mcp"
dynamic = ["version"]
description = "Working-memory shelf for AI agents — offload closed topics to a docshelf shelf as digest-indexed episodes, recall by index."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Filipp Ignatenko", email = "ignatenkofi@gmail.com" }
]
keywords = ["mcp", "model-context-protocol", "claude", "memory", "agent", "llm", "docshelf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: Markdown",
]

# The shelve orchestration (slice 2) wraps docshelf's Shelf. The pure Layer-2/3
# core (redaction, digest contract) stays import-light — it needs none of this,
# so those modules and their tests run without docshelf installed. `mcp` arrives
# with the server surface (slice 3).
dependencies = [
    "docshelf-mcp>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/ignatenkofi/memshelf-mcp"
Repository = "https://github.com/ignatenkofi/memshelf-mcp"
Issues = "https://github.com/ignatenkofi/memshelf-mcp/issues"

[tool.hatch.version]
path = "src/memshelf_mcp/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/memshelf_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "docs/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = ["E501"]  # line length handled by the formatter

[tool.ruff.lint.isort]
known-first-party = ["memshelf_mcp"]
